[build-system]
requires = [
    "hatchling",
    "hatch-requirements-txt"
]
build-backend = "hatchling.build"

[project]
name = "tecton-client"
dependencies = ["httpx"]
description = "A Python Client for the Tecton FeatureService API"
requires-python = ">=3.8"
license = "Apache-2.0"
dynamic = ["version"]
readme = "README.md"

[project.optional-dependencies]
test = [
  "pytest>=6.2.5",
  "pytest_httpx"
]



[tool.hatch.version]
path = "tecton_client/__about__.py"

[project.urls]
"Source" = "https://github.com/tecton-ai/tecton-http-client-python"
"Documentation" = "https://tecton-ai.github.io/tecton-http-client-python/html/index.html"


[tool.pylint."messages control"]
disable = ["all"]
enable = [
    "abstract-method",
    "bad-staticmethod-argument",
    "consider-merging-isinstance",
    "function-redefined",
    "undefined-variable",
    "unused-private-member",
]

[tool.ruff]
# Configure the line-length so Ruff knows how long to make any lines it
# modifies.
line-length = 120
target-version = "py38"
lint.ignore = [
  "E501", # E501 line length (we use black auto-formatter to handle line length)
  "E741", #	ambiguous-variable-name
]

[tool.ruff.lint.pydocstyle]
convention = "google"
