[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tecton-client"
# A lower bound for compatibility sanity, could likely be made lower if needed
dependencies = ["httpx>=0.23.0"]
description = "A Python Client for the Tecton FeatureService API"
requires-python = ">=3.8"
license = "Apache-2.0"
dynamic = ["version"]
readme = "README.md"

[project.optional-dependencies]
dev = [
  "pytest>=6.2.5",
  "pytest_httpx"
]


[tool.hatch.version]
path = "tecton_client/__about__.py"

[project.urls]
"Source" = "https://github.com/tecton-ai/tecton-http-client-python"
"Documentation" = "https://tecton-ai.github.io/tecton-http-client-python/html/index.html"

[tool.ruff]
# Configure the line-length so Ruff knows how long to make any lines it
# modifies.
line-length = 120
target-version = "py38"
extend-select = ["I"]

[tool.ruff.lint.pydocstyle]
convention = "google"
