[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tecton-client"
# A lower bound for compatibility sanity, could likely be made lower if needed
dependencies = ["httpx>=0.23.0"]
description = "A Python Client for the Tecton FeatureService API"
requires-python = ">=3.8"
license = "Apache-2.0"
dynamic = ["version"]
readme = "README.md"

[project.optional-dependencies]
dev = [
  "pytest>=6.2.5",
  "pytest_httpx"
]
docs = [
  "alabaster==0.7.16",
  "Babel==2.14.0",
  "certifi==2024.2.2",
  "charset-normalizer==3.3.2",
  "docutils==0.20.1",
  "idna==3.7",
  "imagesize==1.4.1",
  "importlib_metadata==7.1.0",
  "Jinja2==3.1.3",
  "MarkupSafe==2.1.5",
  "Pygments==2.17.2",
  "snowballstemmer==2.2.0",
  "Sphinx==7.2.6",
  "sphinx-rtd-theme==2.0.0",
  "sphinxcontrib-applehelp==1.0.8",
  "sphinxcontrib-devhelp==1.0.6",
  "sphinxcontrib-htmlhelp==2.0.5",
  "sphinxcontrib-jquery==4.1",
  "sphinxcontrib-jsmath==1.0.1",
  "sphinxcontrib-qthelp==1.0.7",
  "sphinxcontrib-serializinghtml==1.1.10",
]


[tool.hatch.version]
path = "tecton_client/__about__.py"

[project.urls]
"Source" = "https://github.com/tecton-ai/tecton-http-client-python"
"Documentation" = "https://tecton-ai.github.io/tecton-http-client-python/html/index.html"

[tool.ruff]
# Configure the line-length so Ruff knows how long to make any lines it
# modifies.
line-length = 120
target-version = "py38"
extend-select = ["I"]

[tool.ruff.lint.pydocstyle]
convention = "google"
